--- a/style.css
+++ b/style.css
@@ -26,3 +26,11 @@
   box-shadow: 0 20px 25px rgba(0,0,0,0.5);
 }
 
+#background {
+  position: fixed;       /* mindig a háttérben marad */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;            /* gomb mögé */
+}
