--- a/DTMw/css/BMW.css
+++ b/DTMw/css/BMW.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(45deg, #141317, #95620f);
+  background: linear-gradient(45deg, #ff1c35, #0134cb);
 }
 html, body {
     height: 100%;
